[package]
name = "rusty-newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rusty-newsletter"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
reqwest = "0.11.14"
serde = {version="1.0.152", features= ["derive"] }
tokio = {version="1.25.0", features = ["macros", "rt-multi-thread"]}
config = "0.11"
# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
